--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="https://www.kodewithklossy.com/">"Kode with Klossy"</a>
+<a href="https://www.kodewithklossy.com/">\Kode with Klossy\</a>
